Do not show captcha for authenticated users
There was actually a comment saying this should be the case, but no code implementing it!

--- a/tendenci/apps/site_settings/settings.json
+++ b/tendenci/apps/site_settings/settings.json
@@ -375,7 +375,7 @@
     },
     {
         "default_value": "true",
-        "description": "Select true if you want to include Captcha codes on your forms and false to turn them off.  This affects all forms site-wide.",
+        "description": "Select true if you want to include Captcha codes on your forms and false to turn them off.  This affects all forms site-wide for unauthenticated users.",
         "data_type": "boolean",
         "update_dt": "2010-08-12 17:19:13",
         "input_type": "select",
